--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D8.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D8.jrxml
@@ -14,7 +14,7 @@
 	<field name="docQty" class="java.lang.String"/>
 	<field name="docComment" class="java.lang.String"/>
 	<title>
-		<band height="95" splitType="Stretch">
+		<band height="101" splitType="Stretch">
 			<textField>
 				<reportElement x="0" y="25" width="105" height="22" uuid="24d5cb26-b161-4830-ab11-577dd160817f"/>
 				<textElement>
@@ -211,6 +211,68 @@
 				</textElement>
 				<textFieldExpression><![CDATA[new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{refDocDate})]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="366" y="69" width="154" height="22" uuid="7779e99f-2040-47ef-8871-9d1d618e9d9b"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["จำนวนเงินภาษีก่อนหักรายการต่างๆ"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="346" y="69" width="20" height="22" uuid="6e46d861-e7a0-4fdc-a44e-93f7e1322183"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="DejaVu Sans" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["1".equals( $P{docPlace} )?"\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="530" y="69" width="20" height="22" uuid="134f8be8-b991-4445-8ea3-2331f63a6b5a"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="DejaVu Sans" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["2".equals( $P{docPlace} )?"\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="550" y="69" width="130" height="22" uuid="3f16f86a-53d2-46d8-926e-d5f04271d1dc"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["จำนวนเงินรวมภาษีที่ต้องชำระ"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="692" y="69" width="40" height="22" uuid="3a370737-378d-4033-aa2c-afc3dbf5a3e5"/>
+				<textElement>
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["จำนวน"]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="732" y="69" width="48" height="22" uuid="5692b041-bf11-4b37-b16b-9016023cbfd3"/>
+				<box leftPadding="2">
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{docPlace}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="732" y="84" width="48" height="1" uuid="d5f95b2a-27ba-4ed6-8224-e4d8d721cdff"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<textField>
+				<reportElement x="780" y="69" width="21" height="22" uuid="cd6f7d11-6f29-424e-976e-3a0aafe452e4"/>
+				<textElement>
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["ปี"]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<columnHeader>
@@ -243,7 +305,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["รายได้ปีย้อน\nหลัง 1 ปี (บาท)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["รายได้ปีย้อน-\nหลัง 1 ปี (บาท)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="256" y="0" width="68" height="45" uuid="a4ea6029-bcc1-4816-804a-86ed767474d9"/>
@@ -253,7 +315,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["ผลต่างย้อน\nหลัง 1 ปี (บาท)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["ผลต่างย้อน-\nหลัง 1 ปี (บาท)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="324" y="0" width="68" height="45" uuid="3d57ee7a-67bc-4379-8700-9be24533c9ae"/>
@@ -283,7 +345,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["รายได้ปีย้อน\nหลัง 2 ปี (บาท)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["รายได้ปีย้อน-\nหลัง 2 ปี (บาท)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="460" y="0" width="68" height="45" uuid="679f65c0-840f-4ee9-9b47-41943252abf9"/>
@@ -293,7 +355,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["ผลต่างย้อน\nหลัง 2 ปี (บาท)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["ผลต่างย้อน-\nหลัง 2 ปี (บาท)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="528" y="0" width="68" height="45" uuid="42e233da-5f58-4c31-905e-1febd7e2ee59"/>
@@ -313,7 +375,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["รายได้ปีย้อน\nหลัง 3 ปี (บาท)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["รายได้ปีย้อน-\nหลัง 3 ปี (บาท)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="664" y="0" width="68" height="45" uuid="e4dfe048-2d40-4700-91c7-1c675c368c75"/>
@@ -323,7 +385,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["ผลต่างย้อน\nหลัง 3 ปี (บาท)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["ผลต่างย้อน-\nหลัง 3 ปี (บาท)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="732" y="0" width="68" height="45" uuid="cbe61cc6-bdae-4811-8bdf-f972fcbec4e7"/>
